<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marke.workoutrpg.MainActivity">

    <ImageView
        android:id="@+id/dumbell"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/dumbell" />

    <EditText
        android:id="@+id/username"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/dumbell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nextu"
        android:background="@color/white"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:elevation="1dp"/>

    <EditText
        android:id="@+id/password"
        android:textSize="20sp"
        android:layout_below="@id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nextp"
        android:inputType="textPassword"
        android:background="@color/white"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:elevation="1dp" />

    <Button
        android:id="@+id/button"
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:background="@color/gray"
        android:onClick="nextView"
        android:elevation="10dp"/>

    <TextView
        android:id="@+id/newusertext"
        android:text="@string/newaccount"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/button"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/registerclick"
        android:textSize="20sp"
        android:clickable="true"
        android:text="@string/signup"
        android:onClick="rView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/newusertext"
        android:layout_alignBottom="@id/newusertext"
        android:layout_marginLeft="5dp"/>

</RelativeLayout>
