<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/dumbell2"
        android:layout_marginTop="80dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/dumbell2" />

    <EditText
        android:id="@+id/usernameEntry"
        android:layout_marginTop="40dp"
        android:layout_below="@id/dumbell2"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nextu"
        android:background="@color/white"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:elevation="1dp"/>

    <EditText
        android:id="@+id/passwordEntry"
        android:textSize="20sp"
        android:layout_below="@id/usernameEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nextp"
        android:inputType="textPassword"
        android:background="@color/white"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:elevation="1dp" />

    <EditText
        android:id="@+id/passwordCon"
        android:textSize="20sp"
        android:layout_below="@id/passwordEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conp"
        android:inputType="textPassword"
        android:background="@color/white"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:elevation="1dp" />

    <Button
        android:id="@+id/create"
        android:text="@string/create"
        android:layout_below="@id/passwordCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:onClick="nextView"
        android:elevation="10dp"/>

</RelativeLayout>
